reorder resolutionlist + add dateparsing for protocol resolution on old resolution (before 2011) + bugfix: wrong link for attachements + bugfix: don't wrap white spaces in protocol text + bugfix: wrong/missing index on resolution + bugfix: wrong/missing index in protocol edit

--- a/src/public/css/proto.css
+++ b/src/public/css/proto.css
@@ -55,8 +55,8 @@
 		right: 0;
 	}
 }
-.protolist .proto.privat {
-	color: #7e0000;
+.protolist .proto.agreed {
+	color: #00590f;
 }
 .protolist .proto.draft {
 	color: #e06700;
@@ -123,6 +123,7 @@
 .difftable > .line > span:last-child {
 	text-align: left;
 	word-break: break-all;
+	white-space: pre-wrap;
 }
 .difftable > .line > span:nth-child(1) {
 	width: 30px;
